@@ -1,2 +1,1 @@
-:attributes:
-  implicit-imagesdir: images
+:imagesdir: images
